                       User-Visible WebAuth Changes

WebAuth 4.0.1 (unreleased)

    Fix a memory leak in token decoding.

    Properly initialize the creation time of the error token returned to
    the WAS when a login is canceled.

    Update to rra-c-util 3.9:

    * Use an atexit handler to clean up after Kerberos tests.

WebAuth 4.0.0 (2011-09-02)

    WARNING: This release is a major revision with significant changes to
    mod_webkdc and to the WebLogin code.  While the additions are not
    completely specific to Stanford University, it still has some
    limitations and missing components that will make it difficult to
    deploy new features outside of Stanford, and it's not yet been tested
    in a production deployment.  The new mod_webauth and mod_webauthldap
    are suitable for everyone, but sites outside of Stanford University
    will probably want to wait for subsequent releases before updating
    mod_webkdc and the WebLogin code.

    WebAuth now has support for multifactor authentication.  New WebAuth
    configuration directives WebAuthRequireInitialFactor,
    WebAuthRequireSessionFactor, and WebAuthRequireLOA can be used to
    require specific authentication factors, unspecified multiple factors,
    or a site-specific level of assurance value to allow access to
    particular content.  Using this feature currently requires a custom
    middleware service that returns information about users and their
    configured factors and that validates a provided OTP code.  New WebKDC
    configuration directives WebKdcUserInfoURL and WebKdcUserInfoPrincipal
    control how that middleware service is used.  WebKdcKerberosFactors
    controls what factors are assigned to webkdc-proxy tokens obtained
    directly from the WebKDC rather than via WebLogin.

    mod_webauth now exposes the user's initial and session authentication
    methods via environment variables WEBAUTH_FACTORS_INITIAL and