@@ -7,8 +7,8 @@
   </factors>
   <multifactor-required />
   <login-history>
-    <host ip="127.0.0.2">example.com</host>
-    <host ip="127.0.0.3">www.example.com</host>
+    <host name="example.com">127.0.0.2</host>
+    <host name="www.example.com">127.0.0.3</host>
   </login-history>
   <max-loa>3</max-loa>
   <password-expires>1310675733</password-expires>
